--- a/BON Brooklyn.ipynb
+++ b/BON Brooklyn.ipynb
@@ -4440,7 +4440,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "So from examing the above clusters we can predict the neighbourhood where food places should be opened. For example opening a resturant  at **cluster 4 in the neighbourhood of Sea Gate** would be appropiate since there is no popular resturants nearby.\n",
+    "So from examining the above clusters we can predict the neighborhoods where food places should be opened. For example opening a restaurant  at **cluster 4 in the neighborhood of Sea Gate** would be appropiate since there are no popular resturants nearby.\n",
     "\n",
     "**The above procedure can be applied to all boroughs of New York to determine location for any type of commercial establishment.**"
    ]
